# created from response - used to create database and project
#  should run without error
#  if not, check for decimal, indent, or import issues

import decimal

import logging



logging.getLogger('sqlalchemy.engine.Engine').disabled = True  # remove for additional logging

import sqlalchemy



from sqlalchemy.sql import func  # end imports from system/genai/create_db_models_inserts/create_db_models_prefix.py

from logic_bank.logic_bank import Rule

import datetime
from sqlalchemy import create_engine, Column, Integer, String, Float, Boolean, DateTime, ForeignKey, Text, Table
from sqlalchemy.ext.declarative import declarative_base
from sqlalchemy.orm import sessionmaker

# Define SQLite database location
engine = create_engine('sqlite:///system/genai/temp/create_db_models.sqlite', echo=False)
Base = declarative_base()

class Employee(Base):
    """
    description: Stores information about employees, including personal and job details.
    """
    __tablename__ = 'employees'
    id = Column(Integer, primary_key=True, autoincrement=True)
    first_name = Column(String, nullable=False)
    last_name = Column(String, nullable=False)
    email = Column(String, unique=True, nullable=False)
    phone_number = Column(String)
    hire_date = Column(DateTime, default=datetime.datetime.now)
    job_id = Column(Integer, ForeignKey('jobs.id'))
    salary = Column(Float, default=0.0)
    manager_id = Column(Integer, ForeignKey('employees.id'))
    department_id = Column(Integer, ForeignKey('departments.id'))

class Department(Base):
    """
    description: Holds department information and names.
    """
    __tablename__ = 'departments'
    id = Column(Integer, primary_key=True, autoincrement=True)
    name = Column(String, nullable=False)
    manager_id = Column(Integer, ForeignKey('employees.id'))

class Job(Base):
    """
    description: Lists all jobs and descriptions.
    """
    __tablename__ = 'jobs'
    id = Column(Integer, primary_key=True, autoincrement=True)
    title = Column(String, nullable=False)
    min_salary = Column(Float, default=0.0)
    max_salary = Column(Float, default=0.0)

class Payroll(Base):
    """
    description: Records payroll transactions and amounts.
    """
    __tablename__ = 'payrolls'
    id = Column(Integer, primary_key=True, autoincrement=True)
    employee_id = Column(Integer, ForeignKey('employees.id'), nullable=False)
    payment_date = Column(DateTime, default=datetime.datetime.now)
    amount = Column(Float, nullable=False)
    tax_deducted = Column(Float, default=0.0)

class Benefit(Base):
    """
    description: Enumerates possible employee benefits and descriptions.
    """
    __tablename__ = 'benefits'
    id = Column(Integer, primary_key=True, autoincrement=True)
    name = Column(String, nullable=False)
    description = Column(Text)

class EmployeeBenefit(Base):
    """
    description: Connects employees with their assigned benefits.
    """
    __tablename__ = 'employee_benefits'
    id = Column(Integer, primary_key=True, autoincrement=True)
    employee_id = Column(Integer, ForeignKey('employees.id'), nullable=False)
    benefit_id = Column(Integer, ForeignKey('benefits.id'), nullable=False)

class Attendance(Base):
    """
    description: Tracks attendance records including presence days and absences.
    """
    __tablename__ = 'attendances'
    id = Column(Integer, primary_key=True, autoincrement=True)
    employee_id = Column(Integer, ForeignKey('employees.id'), nullable=False)
    date = Column(DateTime, default=datetime.datetime.now)
    status = Column(String, nullable=False)  # e.g. "Present", "Absent", etc.

class LeaveRequest(Base):
    """
    description: Manages employee leave applications and statuses.
    """
    __tablename__ = 'leave_requests'
    id = Column(Integer, primary_key=True, autoincrement=True)
    employee_id = Column(Integer, ForeignKey('employees.id'), nullable=False)
    start_date = Column(DateTime, nullable=False)
    end_date = Column(DateTime, nullable=False)
    status = Column(String, default='Pending')  # e.g., "Approved", "Rejected", "Pending"

class PerformanceReview(Base):
    """
    description: Stores evaluations of employee performance.
    """
    __tablename__ = 'performance_reviews'
    id = Column(Integer, primary_key=True, autoincrement=True)
    employee_id = Column(Integer, ForeignKey('employees.id'), nullable=False)
    review_date = Column(DateTime, default=datetime.datetime.now)
    rating = Column(Integer, nullable=False)
    comments = Column(Text)

class Promotion(Base):
    """
    description: Contains records of employee promotions and new roles.
    """
    __tablename__ = 'promotions'
    id = Column(Integer, primary_key=True, autoincrement=True)
    employee_id = Column(Integer, ForeignKey('employees.id'), nullable=False)
    new_job_id = Column(Integer, ForeignKey('jobs.id'), nullable=False)
    promotion_date = Column(DateTime, default=datetime.datetime.now)

class Deduction(Base):
    """
    description: Lists deductions applicable to employees.
    """
    __tablename__ = 'deductions'
    id = Column(Integer, primary_key=True, autoincrement=True)
    name = Column(String, nullable=False)
    description = Column(Text)
    amount = Column(Float, default=0.0)

class EmployeeDeduction(Base):
    """
    description: Links employees to their respective deductions.
    """
    __tablename__ = 'employee_deductions'
    id = Column(Integer, primary_key=True, autoincrement=True)
    employee_id = Column(Integer, ForeignKey('employees.id'), nullable=False)
    deduction_id = Column(Integer, ForeignKey('deductions.id'), nullable=False)

# Create all tables in the database
Base.metadata.create_all(engine)

# Create a new session
Session = sessionmaker(bind=engine)
session = Session()

# Sample data for demonstration
departments = [
    Department(name='Human Resources'),
    Department(name='Finance'),
    Department(name='Engineering')
]

jobs = [
    Job(title='HR Manager', min_salary=50000, max_salary=80000),
    Job(title='Software Engineer', min_salary=60000, max_salary=120000),
    Job(title='Accountant', min_salary=40000, max_salary=70000)
]

benefits = [
    Benefit(name='Health Insurance', description='Medical, Dental, Vision coverage.'),
    Benefit(name='Retirement Plan', description='401(k) with company matching.'),
    Benefit(name='Paid Time Off', description='Vacation and sick days.')
]

deductions = [
    Deduction(name='Tax', description='Income tax deduction', amount=20.0),
    Deduction(name='Insurance', description='Health insurance premium', amount=5.0)
]

employees = [
    Employee(first_name='John', last_name='Doe', email='john.doe@example.com', job_id=2, salary=65000, department_id=3),
    Employee(first_name='Jane', last_name='Smith', email='jane.smith@example.com', job_id=1, salary=75000, department_id=1),
    Employee(first_name='Emily', last_name='Davis', email='emily.davis@example.com', job_id=3, salary=55000, department_id=2)
]

payrolls = [
    Payroll(employee_id=1, amount=5000, tax_deducted=1000),
    Payroll(employee_id=2, amount=6250, tax_deducted=1250),
    Payroll(employee_id=3, amount=4583, tax_deducted=917)
]

employee_benefits = [
    EmployeeBenefit(employee_id=1, benefit_id=1),
    EmployeeBenefit(employee_id=2, benefit_id=2),
    EmployeeBenefit(employee_id=3, benefit_id=3)
]

attendances = [
    Attendance(employee_id=1, date=datetime.datetime(2023, 10, 1), status='Present'),
    Attendance(employee_id=2, date=datetime.datetime(2023, 10, 1), status='Absent'),
    Attendance(employee_id=3, date=datetime.datetime(2023, 10, 1), status='Present')
]

leave_requests = [
    LeaveRequest(employee_id=1, start_date=datetime.datetime(2023, 12, 1), end_date=datetime.datetime(2023, 12, 5)),
    LeaveRequest(employee_id=3, start_date=datetime.datetime(2023, 11, 1), end_date=datetime.datetime(2023, 11, 3))
]

performance_reviews = [
    PerformanceReview(employee_id=1, review_date=datetime.datetime(2023, 9, 1), rating=5, comments='Outstanding performance.'),
    PerformanceReview(employee_id=2, review_date=datetime.datetime(2023, 9, 1), rating=4, comments='Exceeds expectations.')
]

promotions = [
    Promotion(employee_id=1, new_job_id=1),
    Promotion(employee_id=3, new_job_id=2)
]

employee_deductions = [
    EmployeeDeduction(employee_id=1, deduction_id=1),
    EmployeeDeduction(employee_id=2, deduction_id=2),
    EmployeeDeduction(employee_id=3, deduction_id=1)
]

# Add sample data to session
session.add_all(departments)
session.add_all(jobs)
session.add_all(benefits)
session.add_all(deductions)
session.add_all(employees)
session.add_all(payrolls)
session.add_all(employee_benefits)
session.add_all(attendances)
session.add_all(leave_requests)
session.add_all(performance_reviews)
session.add_all(promotions)
session.add_all(employee_deductions)

# Commit session to the database
session.commit()
