// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Attendance: Tracks attendance records including presence days and absences.
Employee: Stores information about employees, including personal and job details.
Benefit: Enumerates possible employee benefits and descriptions.
Deduction: Lists deductions applicable to employees.
Department: Holds department information and names.
Job: Lists all jobs and descriptions.
EmployeeBenefit: Connects employees with their assigned benefits.
EmployeeDeduction: Links employees to their respective deductions.
LeaveRequest: Manages employee leave applications and statuses.
Payroll: Records payroll transactions and amounts.
PerformanceReview: Stores evaluations of employee performance.
Promotion: Contains records of employee promotions and new roles.
'''
}

Table Attendance {
    id INTEGER [primary key]
    employee_id INTEGER 
    date DATETIME 
    status VARCHAR 
    }

Table Employee {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    email VARCHAR 
    phone_number VARCHAR 
    hire_date DATETIME 
    job_id INTEGER 
    salary FLOAT 
    manager_id INTEGER 
    department_id INTEGER 
    }

Table Benefit {
    id INTEGER [primary key]
    name VARCHAR 
    description TEXT 
    }

Table Deduction {
    id INTEGER [primary key]
    name VARCHAR 
    description TEXT 
    amount FLOAT 
    }

Table Department {
    id INTEGER [primary key]
    name VARCHAR 
    manager_id INTEGER 
    }

Table Job {
    id INTEGER [primary key]
    title VARCHAR 
    min_salary FLOAT 
    max_salary FLOAT 
    }

Table EmployeeBenefit {
    id INTEGER [primary key]
    employee_id INTEGER 
    benefit_id INTEGER 
    }

Table EmployeeDeduction {
    id INTEGER [primary key]
    employee_id INTEGER 
    deduction_id INTEGER 
    }

Table LeaveRequest {
    id INTEGER [primary key]
    employee_id INTEGER 
    start_date DATETIME 
    end_date DATETIME 
    status VARCHAR 
    }

Table Payroll {
    id INTEGER [primary key]
    employee_id INTEGER 
    payment_date DATETIME 
    amount FLOAT 
    tax_deducted FLOAT 
    }

Table PerformanceReview {
    id INTEGER [primary key]
    employee_id INTEGER 
    review_date DATETIME 
    rating INTEGER 
    comments TEXT 
    }

Table Promotion {
    id INTEGER [primary key]
    employee_id INTEGER 
    new_job_id INTEGER 
    promotion_date DATETIME 
    }



// Relationships
    Ref: Attendance.(employee_id) < Employee.(id)
    Ref: Employee.(department_id) < Department.(id)
    Ref: Employee.(job_id) < Job.(id)
    Ref: Employee.(manager_id) < Employee.(id)
    Ref: Department.(manager_id) < Employee.(id)
    Ref: EmployeeBenefit.(benefit_id) < Benefit.(id)
    Ref: EmployeeBenefit.(employee_id) < Employee.(id)
    Ref: EmployeeDeduction.(deduction_id) < Deduction.(id)
    Ref: EmployeeDeduction.(employee_id) < Employee.(id)
    Ref: LeaveRequest.(employee_id) < Employee.(id)
    Ref: Payroll.(employee_id) < Employee.(id)
    Ref: PerformanceReview.(employee_id) < Employee.(id)
    Ref: Promotion.(employee_id) < Employee.(id)
    Ref: Promotion.(new_job_id) < Job.(id)
